Adicionar Petit funcionando, Registro de usuarios funcionando, ver datos de petit funcionando

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,8 @@
       "@components/*": ["components/*"],
       "@layout/*": ["layout/*"],
       "@assets/*": ["assets/*"],
+      "@hooks/*": ["hooks/*"],
+      "@lib/*": ["lib/*"],
     }
   }
 }
