--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "13.2.4",
     "postcss": "^8.4.21",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
